@@ -3,14 +3,14 @@ Hash: SHA256
 
 DIST FlightGear-data-2.10.0.tar.bz2 758115094 SHA256 2fa0280ea9a1a0bee3eab27f034ec45d4cf44a2b818a7036b481da6668f7229f SHA512 e7925ebef97d8968b8cac69440c740d8addc049f99023820686bcfa10163a31ccd3902dbb0e89c2375089c8cc11b7214a1f8a261a4aea74f307af82c38dc027a WHIRLPOOL 54f05c3c094d4adc31271659fdf3f27782f7cbe1c5c32ebd36c6c8b6280607c2ee9bf7a0100677ecb28dae0e1b2955fd79f7878d7e2f717b267196dbf13121c8
 DIST FlightGear-data-2.12.0.tar.bz2 983303973 SHA256 136dfd24c8a28aa8a6a444ecaf2eb881a1e708d19c96b44352d79fcf84645b62 SHA512 e06e260b4c11322052dae1d88ddba7800762fe470dc2c0e19bb4236028a0a9d55f8cbab0bc860a34e7a6d8318110dbd57d6f3169272a87e8e603141a564eacaf WHIRLPOOL 44e00a61af2a2e149eba737699d188ae56d382f5be68b5fe017244e45227df5dca2bcca1793822efaed6a8cb3bad3afbce81b8bd0169693e33caa177bed20349
-EBUILD flightgear-data-2.10.0.ebuild 702 SHA256 9db0d3b25bc4151cf80c8166d9f6ca490e81f3da164f40da9492eb3258d41656 SHA512 49f33a895d8723f6fd9bd602574d32ad181645ed2d8e9ca2f438bdfbaab3f5f2208a694dd99bfeb1357a7c5bce4f5ccb28bcfbbe018648075bc425be96eb7d3f WHIRLPOOL 8a20c27a90a47e04f707b9cb2275864607c5a571110221b02db770f1feacfd20fad7f52e63f9f4c9f7d7e4d1a6bd3e9de50fbc911834eddd483c32bfaed15358
+EBUILD flightgear-data-2.10.0.ebuild 698 SHA256 e45d5755b505827925c375d7862f3cd6df8217f05aea1fcd6fddceb8b1b5f963 SHA512 1a789c9d3f7044aff36c2ffc450905305c7b0d5ee2ca05cfad3f7a51d919f65d632548648867c476f5be08552485764b99cbd44e1483fb5bdeabfd4e22729f16 WHIRLPOOL 5c7153fcb23d62df13c978530d555d461cb16ec0cd28e51554aff0b10b93ca4179a43ad44dfb9425f17fc3a8b13384319dfbacc8b3e6e0a181e32a2cd109b13f
 EBUILD flightgear-data-2.12.0.ebuild 736 SHA256 c90475187db8fb76c2a2cb6ac5a64b9e6cb964eebff0555a7d13137fbd895c2b SHA512 d118f2f7aa7f5d7eae2595e49446471a93ed645151a575c600cb703e853e7f386fe7bda72f38f48ca82c936deaebf2c0fd33bbd73fc27137300cc7186c11baf1 WHIRLPOOL f86b1b60eb3ca35cbbb4250db90ab3f905caa0f12ac166c978553b43c10a1b1282b336d1aeb459a2d1aa3f050094a680c269bff48c5ad6e0d7dfabe669a7d0ca
-MISC ChangeLog 564 SHA256 13b85e35ab3516678fba91a079d73d37fbf1f5fca80d896fa0ea31485003f7bb SHA512 d438225a6335f1b99765775051070872f26d5010fe51a317bf242af98315768f0b722533ee20afeec65bbb31f80480060bb0b4779b5cf27e741c8799ebc31b45 WHIRLPOOL 0a26845db0293eff8d53d7f997f2124524d02ddbe4b083a655e40e5c4e967e69f85bd70fc5a5fda3244263b150cfcabab1ac7f50bdd9a895462befe0a651805b
+MISC ChangeLog 667 SHA256 bbb69cae10c108b668303ce2f58a375523779cb6af145af950f43d507e4a657c SHA512 627f9eb4366b136705d30a7830e04b706c038f18e59b706106c526abf78b0af346a278b0396bb8e5f6fc01a179493a5de1d32a8d2665fc9a6743b6a7b84c8b19 WHIRLPOOL 2140a09772497c3f1521bd56257f2e0c567461e4914856187eefcb33a46d79c209cf64a14f7a4a9d3a7dac11a98cc40522898ed2c9e2f37b8e39ebe384ea1d29
 MISC metadata.xml 252 SHA256 2dc38e2edb5ef0ce76845cfb7ab60e702c61eaff8e5ae142025b1793ed81084c SHA512 e2066947e3e2bd14b22fc53e21b62a03cb07522cdb4869649bd6aa9166af8c83b9635255d20a1fdd7a7fc50c9d9f64f8298249f5c698f753e996c24958f48e52 WHIRLPOOL b8ded12a25e375d3ba15c1d550df9dfc49b8320d8d89211980c144192a54786318842a6ab653fd5e56a7b58d181c4a24b4461901630f7b007b4df225ee120869
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKQENoACgkQFuHa/bHpVdvX+gCgt8cQxbBkooGcGXvzkc/TnfCh
-Q7EAoK/M0dX+XQoupvGZdwrsQ1hggsAy
-=rVje
+iEYEAREIAAYFAlKRtIkACgkQCaWpQKGI+9Ra3wCfT3suFNrrnQBFbF6rPNWiv5CH
+TRUAnj8aBLzFi0yF5ENJ6WGGw4i2IeMo
+=Czha
 -----END PGP SIGNATURE-----
