@@ -6,15 +6,15 @@ DIST FlightGear-data-2.8.0.tar.bz2 685330156 SHA256 ad9ba1d12b5c771193561d452ec3
 DIST flightgear-2.10.0.tar.bz2 3378859 SHA256 067e24acb69a21721a97e48c1a088a2982bd08b8084a9073c90a5dde3db7055f SHA512 b982168c893da3e97cce63b92c93af3dd684a3d3c9c56a1e8e76629388fbbf56f4d5ad25013230094b701fef1bc70793c6a103b8bfe381e671d9f7ba0e2e8423 WHIRLPOOL 1c541334d452543e40b4d6db67e5a53ab3a95ac88cf04f07446c0cb826345b5c07f5704fb902f306572b12218999a6017f6166ad1e74e21f70b9e562bf843aa3
 DIST flightgear-2.12.0.tar.bz2 3424463 SHA256 84499d1b2a6c3c801a3c163f4f40d1f55b5fbcd4b65259fc5e5d5aa12e513341 SHA512 0d179a9beb89cde0396ec4cc6dccc0572bda19b5e0f311dd878cd4f46a2ea91d455212143dedc45a33d12c992b7b265117d99c508c8546bc332fe40e96d366e8 WHIRLPOOL c6dd4f982d68a9dadba25baa3848ef9ba5ead6d2ddaa737229632880711912c9f0b5da8443c7356bd1bb44551fffd8991fabba4609788db7926d85796da12e68
 DIST flightgear-2.8.0.tar.bz2 2311023 SHA256 bfda4f269d90128f4e4cb828de692a49dc0b93db41fe20a2b5272f3f271f3a01 SHA512 4d9b2584dd7c2fa4ad28d9769a9429809e420c7bf858967a5bb461f8ecb78dd079ff01c78febb95b7c3edce40dbf01e077bf7423324958e0b0a3cc74df12e1c1 WHIRLPOOL 615467c08d7b5f4f9e85d8248359452f2b9dc438e2184a7f8d126e57369f9b5d16b49c3779f0f58915236435f83610b3c76671cf049e5dffcb9428cd4bf82823
-EBUILD flightgear-2.10.0.ebuild 1967 SHA256 487ec0a0494fb1cbe558879ab640e8915ec8f79802f32df241f120243af0d367 SHA512 3a15f080687669aa1556688bb3d682876128b2564541720b623909b0000b116c5d5343db2c405f1dbee1160459fe4ad3b2c05ec05a4990aa69fe94687196b000 WHIRLPOOL ca301697727e2392fc732f771bcd8e94b95f540f9ad09e53e683e11c363629bb5f20a0d2bb6ac33beb9efbcf421a48b616fea1f1a18be86bb491d6bba81ae92c
+EBUILD flightgear-2.10.0.ebuild 1963 SHA256 ed64605b03ead6db1aeb3af49ba53adf8cc5332bbd90a508d05fa37c4c8f7a02 SHA512 13097e7337dbaa5d1f88188ec529bdef4a813519930ba252c458d3b211499500b283f4724f614033421ac3119d9cbf6ea71230d83466495e5349fe800e337376 WHIRLPOOL 328361d718c0464e6e928f8b882330236f407abd7cdd0f31ae1762b6b2e0c7fe72fdf1480b7eb498a295beade3add7dc2dfcc18838e32cbdcf47d2526919c0a6
 EBUILD flightgear-2.12.0.ebuild 2306 SHA256 96e4aded1cec30f4177ac70ae2a1cba7cb6e5404f7a71bf604f5eb04491804b8 SHA512 9c01b3693e61859055a03dc7407c4d0513a39615267978f9b96e7d82e0a0a91bafdc002e6ff87c7eff014ab58e9a842c9069159bb3642d8fc75ded8f67cda6a8 WHIRLPOOL 85ab36d686d538401b617e9563b7499cac6d4682036f6d6b29d9ba3c9df2dc7b47fe7621d240899753ece76b511741e882d36cde1878829fab1da82c7c4601b7
 EBUILD flightgear-2.8.0.ebuild 2027 SHA256 1528c7782739e0aac032635f7a593a6cd8890b7f89f83c11e35dd3e7846fb4dc SHA512 844ca99eb57f29f15d44f5da11d8398867e61ee1a000e3b322f472708c0949871a8279961f7805cd87302421aef38dc75a8d07695d4a67061723641fd5f004ce WHIRLPOOL aefe4f854c676b96da434846658eeed1a8d66a02ac22dca0b18680112f8f29f28ea5972572a520372378224cc9046be60263be7655ff2d62eae5625aeecb1bf1
-MISC ChangeLog 11203 SHA256 ad427e1447aec4bbbcea887677637ba8127c9847549d1cf69f707d21578c960d SHA512 afedbdc6c09017350dfb4e586209680a590483b4757b53ca6807e757bee681d16fa99050b570ff51d1aea7e7f24ca8ccb16a26b12247665d69ee9f7bb52cad46 WHIRLPOOL 68f1d812c6e6078102b577f308633cd53b2a7ece4ec51e09a5d07e536ededd6319561df8a26143f876f897ac578e5f665ce81c68c76be342db62211fe1e7b21e
+MISC ChangeLog 11301 SHA256 da90156e3b57214ab202548d2ad5a88e384b20f46d5fc0e6e36fb42a0f7b9fd2 SHA512 c543282827237af409cfe88bc77ef319a955f776412e256ddb69d25e93cbd94dd3ed7877445291a50a01f9e17f3ef698dd6c737e5b40fc01012a3f7f5ba56b37 WHIRLPOOL 33e3c132c86ee84a7f37ffaf45cc7f00dd5b253cc061414da87f6d660193528886b7dbfb63149e42d47a9e5be5865a85f167a8ea138049fdfa1d7de3e2aac4b2
 MISC metadata.xml 833 SHA256 b1c43a0068c979967758a16cfcbc49ccde2d7e119f3ac5c62d6b59b27cb251d6 SHA512 ae00ba03f5ed4093652c52b00e67d2e7a4425a1e0d5aaf72a3b9b22b518e09686359538d75cdd9da1d8486bca535c04b753185a94a5c769b8c6071e036ff1ec9 WHIRLPOOL a17bd168ae674485b5fdc37cca94831fca6aa88f57a23705478e769d386ca3adfa9c56db5f811ba8796de96a13db9fa17d94e8c2da9f90fe3bf5a558a0c90214
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKQEQwACgkQFuHa/bHpVdv6kACeKUJLey1AFJ79vn6xmzkJeERg
-rBsAnRU2CwpXc5/HS1yrDFjkpZA6yVPf
-=s56W
+iEYEAREIAAYFAlKRtOkACgkQCaWpQKGI+9QjNwCfQXvD+uxWqpaMK+UYO+4y6S5I
+VHYAn3jeU3k2RxQkXzxQSOP6ZZdcB3Wr
+=CMtH
 -----END PGP SIGNATURE-----
